# teacher-student

./: docker-compose.yml  pyproject.toml
app/app/: settings.py  urls.py
app/authentication/: admin.py  forms.py  models.py  urls.py  views.py
app/authentication/decorators/: v1.py
app/authentication/migrations/: 0001_initial.py  0002_alter_customuser_role.py  0003_customuser_father_name_customuser_first_name_and_more.py  0004_alter_customuser_email_alter_customuser_role.py  0005_alter_customuser_role.py  0006_student_teacher_delete_customuser.py  0007_personinfo_student_teacher_student_person_info_and_more.py  0008_remove_student_teacher.py  0009_studentteacher_student_teachers_and_more.py  0010_alter_personinfo_options_alter_student_options_and_more.py  0011_studenttopic_message_student_topics_and_more.py  0012_alter_message_title.py  0013_alter_studenttopic_options_remove_message_teacher.py  0014_message_upload.py  0015_alter_message_upload.py  0016_topic_description_topic_upload.py  0017_personinfo_number_of_contract_and_more.py  0018_personinfo_year_in_school.py  0019_rename_year_in_school_personinfo_language.py  0020_billing.py  0021_remove_billing_student_student_billing.py  0022_alter_student_billing.py  0023_alter_billing_options_alter_student_billing.py  0024_teacher_course_name_alter_billing_create_at_and_more.py
app/authentication/templates/main/: base.html
app/authentication/templates/registration/: choose-role.html  (+3 more)
app/authentication/utils/: v1.py
app/data/: languages.txt
app/tasksManager/: apps.py  forms.py  urls.py  views.py
envs/: prod.env
(+7 files in other folders)
